--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -4,6 +4,10 @@
 --------------------------------------------------*/
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~@fortawesome/fontawesome-free/css/all.css";
+
+* {
+  box-sizing: border-box;
+}
 body {
   color: #3a4956;
   background: #fff;
