Removed Value Object Types, Remnamed classes, updated debounceTime

--- a/ui/src/app/classes/classes.component.html
+++ b/ui/src/app/classes/classes.component.html
@@ -1,5 +1,5 @@
 <section id="schema_class_section" class="container content">
-  <h1>List of Classes</h1>
+  <h1>List of Types</h1>
   <p>The table here shows the list of classes available with description</p>
   <br />
   <table class="table table-striped">
