--- a/ui/src/app/entities/entities.component.html
+++ b/ui/src/app/entities/entities.component.html
@@ -21,7 +21,7 @@
       >
     </ul>
 
-    <h4>Value Object types</h4>
+    <!-- <h4>Value Object types</h4> -->
     <p>
       These are used to describe JSON objects that are values of certain
       properties.
