--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -4,6 +4,7 @@
 --------------------------------------------------*/
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~@fortawesome/fontawesome-free/css/all.css";
+@import "~highlight.js/styles/github.css";
 
 * {
   box-sizing: border-box;
