changed hover effect on playground button

--- a/ui/src/app/schema-details/schema-details.component.css
+++ b/ui/src/app/schema-details/schema-details.component.css
@@ -80,5 +80,8 @@ tr:nth-child(even) {
   border: black;
 }
 #aJson a:hover {
-  color: black;
+  color: maroon;
+  /* color: rgb(5, 5, 119); */
+  background-color: lightgray;
+  text-decoration: underline;
 }
