--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -1,17 +1,17 @@
-<div class="jumbotron container-fluid content-style">
+<div class="jumbotron container content">
   <h1>IUDX Vocabulary</h1>
   <p>
-    voc.iudx.org.in is a collaborative vocabulary set detailing schemas for
-    structured data exchanges and IUDX APIs.
+    voc.iudx.org.in is a shared vocabulary that details schemas for structured
+    data exchange via IUDX data exchange APIs. The creation and maintenance of
+    voc.iudx.org.in schemas is intended to be a collaborative activity.
   </p>
   <p>
-    voc.iudx.org.in vocabulary is essentially based on JSON-LD markup and
-    intended to be used with IUDX APIs and data exchange.
-  </p>
-  <p>
-    This allows intelligent applications and data consumers to understand
-    semantic meaning of attributes and entities entailing the IUDX
-    specification.
+    A shared vocabulary along with a data exchange standard has the potential to
+    enable data interoperability, functional extensibility and information
+    exchange across silos (application verticals, city departments etc.).
+    Further, shared vocabulary allows intelligent applications and data
+    consumers to understand semantic meaning of attributes and entities
+    entailing the IUDX specification.
   </p>
 </div>
 <hr />
