--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -13,6 +13,38 @@
     consumers to understand semantic meaning of attributes and entities
     entailing the IUDX specification.
   </p>
+  <p>
+    The schema used to specify voc.iudx.org.in is derived from the Resource
+    Description Framework (RDF) schema. Apart from standard properties from
+    RDFS, additional properties have been defined to specify vocabulary
+    components. For example, similar to schema.org, additional properties like
+    ‘domainIncludes’ and ‘rangeIncludes’ have been used to allow associating a
+    property with multiple domains and ranges.
+  </p>
+  <p>voc.iudx.org.in consists of:</p>
+  <br />
+  <ul style="text-align: justify;">
+    <li>
+      Set of ‘types’ (or ‘classes’) representing structured data objects. These
+      ‘types’ are organized into single inheritance hierarchies using the
+      ‘rdfs:subclassOf’ property from RDF Schema.
+    </li>
+    <br />
+    <li>
+      Set of ‘properties’ where each property may have one or more types as its
+      domain which implies that this property may be present in the instances
+      belonging to any of the domain types. Further, each property may have one
+      or more types as its range which implies that the value objects for this
+      property should be an instance of at least one of the range types.
+      Additional properties like ‘exactMatch’ may be used to provide additional
+      linkings to already known properties from other vocabularies.
+    </li>
+  </ul>
+  <p>
+    For example, a data model can be represented as a ‘type’ and is associated
+    with all the properties that include this data model type in its domain.
+  </p>
+  <p>voc.iudx.org.in uses JSON-LD to represent vocabulary objects.</p>
 </div>
 <hr />
 <app-footer></app-footer>
