--- a/ui/src/app/schema-details/schema-details.component.css
+++ b/ui/src/app/schema-details/schema-details.component.css
@@ -66,7 +66,8 @@ tr:nth-child(even) {
 .display-style table {
   width: 70%;
 }
-.button {
+.button,
+.clipboard-style {
   /* background-color: #3a4956; */
   background-color: #003f87;
   text-decoration-color: white;
@@ -78,7 +79,17 @@ tr:nth-child(even) {
 #aJson a {
   color: white;
   border: black;
+  margin-left: 20px;
 }
 #aJson a:hover {
   color: black;
+}
+button {
+  border: none;
+}
+#aJson {
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  padding-left: 775px;
 }
