--- a/ui/src/app/schema-details/schema-details.component.html
+++ b/ui/src/app/schema-details/schema-details.component.html
@@ -205,7 +205,7 @@
         <br />
         <div id="aJson">
           <button class="clipboard-style" [cdkCopyToClipboard]="example | json">
-            Copy to clipboard
+            <i class="fas fa-paste"> Copy</i>
           </button>
           &nbsp;
           <a
