Changed CSS for descriptor-details, Removed Descriotor tab from header & placed the link for descriptor inside Data model

--- a/ui/src/app/data-descriptors/descriptor-details/descriptor-details.component.css
+++ b/ui/src/app/data-descriptors/descriptor-details/descriptor-details.component.css
@@ -1,8 +1,4 @@
-.ngx-json-viewer[_ngcontent-lxb-c5] {
-  font-size: 18px !important;
-}
-
 .content {
-  padding-left: 280px;
+  /* padding-left: 280px; */
   font-size: 15px;
 }
