--- a/ui/src/app/data-models-domain/data-models-domain.component.html
+++ b/ui/src/app/data-models-domain/data-models-domain.component.html
@@ -90,7 +90,12 @@
       </mat-card-actions>
     </mat-card>
   </div>
-
+  <div class="para-style">
+    <p>
+      All the user contributed data-model descriptors can be found
+      <a routerLink="/data-descriptors">here</a>
+    </p>
+  </div>
   &nbsp;
   <br />
 </section>
