--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -47,14 +47,14 @@
               >Types</a
             >
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a
               class="nav-link"
               routerLinkActive="active"
               routerLink="/data-descriptors"
               >Data Descriptors</a
             >
-          </li>
+          </li> -->
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input
